--- a/css/seats/index.html.scss
+++ b/css/seats/index.html.scss
@@ -11,7 +11,7 @@ ul.seating {
   }
 
   & > li > span.header {
-    background: linear-gradient(124deg,  #e81d98, #f0b71d, #e3e868, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3);
+    background: linear-gradient(124deg, #e81d98, #e81d98, #f0b71d, #e3e868, #e3e81d, #1de840, #1ddde8, #1ddde8, #2b1de8, #2b1de8, darkviolet, darkviolet);
     display: block;
     padding: 3px;
     font-size: 2rem;
