--- a/_layouts/knot.html
+++ b/_layouts/knot.html
@@ -70,11 +70,11 @@
           <div class="clearfix"><button class="main-nav">Menu</button></div>
           <nav class="main-nav-hidden" id="main-nav">
             <ul>
-              <li><a class="selected" href="/knot">Our Wedding</a>
+              <li><a href="/knot">Our Wedding</a>
                 <ul>
-                  <li><a class="selected" href="#our-story">Our Story</a></li>
-                  <li><a class="selected" href="#the-wedding">The Wedding</a></li>
-                  <li><a class="selected" href="#wedding-party">Wedding Party</a></li>
+                  <li><a href="#our-story">Our Story</a></li>
+                  <li><a href="#the-wedding">The Wedding</a></li>
+                  <li><a href="#wedding-party">Wedding Party</a></li>
                 </ul>
               </li>
               <li><a class="" href="/knot/details">Details</a>
