--- a/_includes/std-head.html
+++ b/_includes/std-head.html
@@ -1,5 +1,8 @@
 <meta charset="utf-8">
 <title>{{page.title | default: site.title}}</title>
+{%for prop in page.og
+  %}<meta property="og:{{prop[0]}}" content="{{prop[1]}}" />
+{%endfor%}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{"/css/main.css" | relative_url}}">
 <link rel="stylesheet" href="{{"/css/" | append: (page.path | default: "home") | append: ".css" | relative_url}}">
